wp-content/themes/accelerate-theme-child/style.css
/*
Theme Name:   Accelerate Theme Child
Theme URI:    http://example.com/accelerate-theme-child/
Description:  Accelerate Child Theme - Accelerate
Author:   	ReeseDev
Author URI:   http://example.com
Template: 	accelerate-theme
Version:      2.0.0
Tags:     	light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
Text Domain:  accelerate-theme-child
*/

/* HOMEPAGE STYLES */
.home-page {
    background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
}

#masthead {
    background: none repeat scroll 0 0 #45ac9d;
}

.button {
background: #45ac9d;
}

/* FEATURED WORK STYLES */
.featured-work h4{
	text-transform: uppercase;
	text-align: center;	
	margin: 34px 0;	
}
.featured-work{
	text-align: center;
}
ul.homepage-featured-work{
	list-style-type: none;
	display: flex;
	justify-content: center;	
	flex-wrap: wrap;	
}
.individual-featured-work{
	width: 90%;
	align-items: center;	
}
.individual-featured-work h3{
	text-align: center;
	font-weight: 500;
	margin-top: 20px;	
}
/***********************************************/
/* MEDIA QUERY FRONT-PAGE FEATURED WORK STYLES */

@media (min-width: 768px) {
	/* FEATURED WORK STYLES */
	.featured-work h4{
		text-transform: uppercase;
		text-align: center;	
	}
	ul.homepage-featured-work{
		align-content: center;
		justify-content: space-between;	
	}
	.individual-featured-work{
		width: 31%;
	}
}
/************************************************/

/* BLOG POST STYLES */
.blog-post {
	width: 50%;
	float: left;
	margin-bottom: 2em;
}

.blog-post h4 {
    font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
    color: #a6a6a6;
    text-transform: uppercase;
    margin: 2em 0 .5em;
}

.blog-post h3 {
	font-size: 1.5em;
}

.read-more-link {
	font-family: 'Montserrat';
	font-weight: 700;
	color: #45ac9d;
	text-transform: uppercase;
}

/* CASE STUDIES */
.case-study-sidebar{
	width: 90%;
	color: #636060;
	padding-bottom: 40px;
}
aside h2{
	font-size: 1em;
}
aside h4{
	font-weight: lighter;
	font-size: .7em;
	margin-top: 10px;
}
aside h4 span{
	font-weight: 600;
}
.case-study-images {
	width: 100%	
}
.case-study-images img{
	margin-bottom: 45px;
/* KEEP IMAGES THE SAME SIZE AS ADDED */
	width: 100%;
	height: auto;
/*********************/
	
}
		/*********************************************/
		/* MEDIA QUERY CASE STUDIES STYLES */

		@media (min-width: 768px) {
			/* CASE STUDIES ACRCHIVE PAGE STYLES */
			.case-study{
				overflow: auto;
			}
			.case-study-sidebar{
				float: left;
				width: 40%;				
			}			
			.case-study-images img{
				float: right;
				width: 60%;	
			}
		}
		/*********************************************/

/* CASE STUDIES ACRHIVE PAGE */

.case-study-sidebar{
	width: 90%;
}
.case-study-images img{
	width: 100%;

}
		/********************************************/
		/* MEDIA QUERY CASE STUDIES ARCHIVE STYLES */

		@media (min-width: 768px) {
			/* CASE STUDIES ACRCHIVE PAGE STYLES */

			.case-study-sidebar{
				float: left;
				width: 31%;
			}
			.case-study-images img{
				float: right;
				width: 60%;
			}
		}
		/********************************************/
/* NAV STYLES */
/* HEADER TOP NAV */

ul.nav-menu{
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-around;
}


/* SOCIAL MEDIA FOOTER */
ul.social-media-menu {
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-around;
	list-style-type: none;	
	padding-left: 450px;
}	
		/********************************************/
		/* MEDIA QUERY HEADER AND FOOTER NAV */

		@media (min-width: 768px) {
			/* NAV STYLES */
			/* SOCIAL MEDIA FOOTER */
			ul.social-media-menu {
				display: flex;
				flex-wrap: nowrap;
				list-style-type: none;
				padding-left: 0;	
			}
			
		}
		/********************************************/

